# Bytover

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Diagram.drawio  LICENSE  Makefile  README.md  Readme.md  audio-rtc.drawio  docker-compose.yml  plan.md  postgres-init.sql  rust-toolchain.toml  rustc-ice-2025-03-19T09_57_34-49436.txt  rustc-ice-2025-04-12T14_15_57-95433.txt  signalling-scaling.md
Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Desktop/src-tauri/desktop.xcodeproj/: project.pbxproj
Desktop/src-tauri/src/: lib.rs
backend/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml  migrations.sql  uniffi.toml
backend/backend.xcodeproj/: project.pbxproj
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250108_000006_create_device_alias_table.rs  m20250309_000001_create_app_releases_table.rs  m20250309_000002_seed_app_releases.rs  m20251227_000004_create_p2p_session_table.rs  m20251229_000005_update_p2p_session_description.rs  m20260328_000001_add_signalling_key_to_p2p_session.rs  m20260408_000001_add_signalling_route_to_p2p_session.rs  m20260423_000001_create_user_capabilities_table.rs  m20260424_000001_merge_darwin_add_store_url.rs  m20260424_000002_app_releases_unique_platform_version.rs  m20260425_000001_add_device_unique_key_to_user_capabilities.rs  m20260425_000002_bump_free_plan_lifetime_cap_to_20gb.rs
backend/proto/: bit_bridge.proto
backend/src/: config.rs  di_container.rs  errors.rs  main.rs
backend/src/app_gateway/: app_info.rs  markov.rs  mod.rs  payment_gateway.rs  plan.rs
backend/src/cloud_storage/: storage.rs
backend/src/entities/: app_release.rs  device_alias.rs  mod.rs  p2p_session.rs  transfer_progress.rs  transfer_resource.rs  transfer_session.rs  user_capabilities.rs
backend/src/grpc/: cloud_service.rs  errors.rs  mappers.rs  mod.rs  oauth.rs  p2p_service.rs
backend/src/http/: mod.rs  update.rs
backend/src/infrastructure/: app_gateway.rs  mod.rs
backend/src/mail/: service.rs
backend/src/repositories/: app_release.rs  device_alias.rs  mod.rs  p2p_session.rs  transfer_session.rs  user_capabilities.rs
backend/src/transfer/: mod.rs  p2p_transfer_service.rs  transfer_service.rs
backend/src/user/: mod.rs
desktop/src-tauri/: .gitignore  Bytover.provisionprofile  Bytover_Production.provisionprofile  Cargo.toml  Info.appstore.plist  Info.plist  PrivacyInfo.xcprivacy  entitlements.appstore.plist  entitlements.dev.plist  entitlements.plist  tauri.conf.appstore.json  tauri.conf.dev.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: content_handlers.rs  extensions.rs  lib.rs  main.rs  mouse_tracking.rs  shelf_dock.rs  theme.rs  thumbnail.rs
gateway-registration/: Cargo.toml  Dockerfile
gateway-registration/src/: main.rs
libs/core-services/: .gitignore  Cargo.toml
libs/core-services/src/: lib.rs
libs/devlog-sdk/: .gitignore  Cargo.toml
libs/devlog-sdk/src/: config.rs  lib.rs  sdk.rs
libs/schema/rust/: Cargo.toml  build.rs
native/: Cargo.toml
native/native.xcodeproj/: project.pbxproj
native/src/: config.rs  di_container.rs  errors.rs  lib.rs  shared.udl
native/src/core_api_impl/: bridge.rs  io.rs  mod.rs  net_stream.rs
native/src/grpc/: auth_provider.rs  auth_server.rs  cloud_server.rs  errors.rs  mod.rs
native/src/native/: database.rs  executor.rs  local_storage.rs  message_to_shell.rs  mod.rs  p2p.rs  persistent.rs  rpc.rs  transfer.rs
native/src/network/: grpc.rs  grpc_channel.rs  mod.rs  module.rs
native/src/repository/: auth_session.rs  device_alias.rs  id.rs  local_resource.rs  mod.rs  path_resolver.rs  shelf.rs  transfer_session.rs  user.rs
native/src/webrtc/: client.rs  ice.rs  mod.rs  plan.md  pool.rs  rtc.rs  server.rs  signalling.rs  socket.rs  turn.rs  utils.rs
relay-server/: Cargo.toml  Dockerfile  docker-compose.swarm.yml  plan.md
relay-server/assets/: .gitignore  README.md
relay-server/src/: config.rs  di.rs  gateway.rs  geoip.rs  grpc_service.rs  locator_client.rs  main.rs  public_ip.rs  stun_server.rs
relay-server/src/app_gateway/: client.rs
relay-server/src/connection/: mod.rs  proxy.rs  proxy_manager.rs  rtc.rs  rtc.rs.orig
relay-server/src/grpc_middleware/: auth.rs
relay-server/src/middleware/: auth.rs
relay-server/tests/: auth_interceptor_test.rs  relay_rtc_test.rs
rpc-signalling/: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  enhancement_file.md  rustfmt.toml
rpc-signalling/.github/workflows/: railway.yaml
rpc-signalling/app/: Cargo.toml
rpc-signalling/app/src/: locator.rs  turn_server_registry.rs  websocket.rs
shared/: Cargo.toml  new_plan.md
shared/shared.xcodeproj/: project.pbxproj
shared/src/: App.swift  ContentView.swift  app.rs  config.rs  core.swift  di_container.rs  errors.rs  lib.rs  shared.udl
shared/src/app/: core_utils.rs  counter.rs  mod.rs  system.rs
shared/src/core_api/: mod.rs  network.rs
shared/src/core_transfer_protocol/: mod.rs
shared/src/entities/: capabilities.rs  device.rs  file.rs  finding_scope.rs  local_resource.rs  mod.rs  peer.rs  session.rs  shelf.rs  target.rs  token.rs  transfer.rs  transfer_method.rs  transfer_session.rs  user.rs
shared/src/executor/: p2p.rs  persistent.rs  rpc.rs  transfer.rs
shared/src/grpc/: auth_provider.rs  auth_server.rs  cloud_server.rs  mod.rs
shared/src/instrument/: mod.rs
shared/src/native/: database.rs  executor.rs  local_storage.rs  message_to_shell.rs  mod.rs  p2p.rs  rpc.rs  transfer.rs
shared/src/network/: grpc_channel.rs  mod.rs  module.rs  throughput.rs
shared_types/: Cargo.toml  build.rs
signalling/: Cargo.toml  Dockerfile  integration.md  plan.md
signalling/src/: app_gateway.rs  client.rs  client_manager.rs  config.rs  locator.rs  main.rs  scope_key.rs  server.rs  signaller.rs  turn_manager.rs  turn_server_registry.rs  websocket.rs
signalling/tests/: scope_integration_tests.rs
web-next/wasm/: Cargo.toml  wasm_core.ts
web-next/worker/: Cargo.toml
(+775 files in other folders)
