[workspace]
members = [
    "shared",
    "shared_types",
    "desktop/src-tauri",
    "backend",
    "backend/migration",
    "native",
    "web-next/wasm",
    "web-next/worker",
]

resolver = "2"

[workspace.package]
authors = ["Jimmy"]
edition = "2021"

[profile.dev]
debug-assertions = false

[workspace.dependencies]
core-services = { path = "libs/core-services", default-features = false }
devlog-sdk = { path = "libs/devlog-sdk", default-features = false }
schema = { path = "libs/schema/rust", default-features = false }
matchbox_protocol = { git = "https://github.com/dev-logs/matchbox.git", branch="main" }
matchbox_socket = { git = "https://github.com/dev-logs/matchbox.git", branch = "main", default-features = false }
ewebsock = { git = "https://github.com/c-git/ewebsock.git", branch = "wss_support", features = ["tokio", "tls"] }
anyhow = { version = "1.0.99", default-features = false }
crux_core = { version = "0.16.1" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
surrealdb = { version = "2.3.7", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
serde_derive = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.143", default-features = false }
chrono = { version = "0.4.42", default-features = false }
surreal_derive_plus = { version = "2.2.5", default-features = false }
surreal_devl = { version = "2.2.4", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
tonic-middleware = { version = "0.3.0", default-features = false }
tokio = { version = "1.47.1", default-features = false }
reqwest = { version = "0.12.23", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
log = { version = "0.4.28", default-features = false }
tonic = { version = "0.13.1", default-features = false }
prost = { version = "0.13.5", default-features = false }
uniffi = { version = "0.29.4" }
bincode = { version = "1.3.3", default-features = false }
tower-service = { version = "0.3.3", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
url = { version = "2.5.7", default-features = false }
uuid = { version = "1.18.1", default-features = false }
h3o = { version = "0.9.3", default-features = false }
bytes = { version = "1.10.1", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
tokio-util = { version = "0.7.16", default-features = false }
redb = { version = "3.1.0", default-features = false }
futures-timer = { version = "3.0.3", default-features = false, features = ["wasm-bindgen"] }
n0-future = { version = "0.2.0", default-features = false }
http = { version = "1.3.1", default-features = false }
async-stream = { version = "0.3.6", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
futures = {version = "0.3.31", default-features = false }
http-body = { version = "1.0.1", default-features = false }
erased-serde = "0.4.8"
indexmap = "2.11.0"
tonic-web = "0.14.1"
hostname = "0.4.1"
machine-uid = "0.5.3"
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json"] }
image = "0.25.8"
tempfile = "3.23.0"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
cargo-run-bin = { version = "1.7.2" }
cargo-binstall = { version = "1.10.22" }

[workspace.metadata]
# Will log the query command at runtime
surreal_enable_log = true
# Will log the generated code at build time
surreal_enable_compile_log = false
# Change the naming convention of a generated statement into a camel case
surreal_use_camel_case = false
# The log namespace, apply for both build time log and runtime log
surreal_namespace = "surrealql"
# The macro name that use for info log
surreal_info_log_macro = "log::debug"
# The macro name that use for warning log
surreal_warn_log_macro = "log::debug"
