[workspace]
members = [
    "shared",
    "shared_types",
    "desktop/src-tauri",
    "backend",
    "backend/migration",
    "native",
    "web-next/wasm",
    "web-next/worker",
    "signalling"
]

resolver = "2"

[workspace.package]
authors = ["Jimmy"]
edition = "2021"
rust-version = "1.74.0"
version = "0.1.0"

[profile.dev]
debug-assertions = false

[workspace.dependencies]
core-services = { path = "libs/core-services", default-features = false }
devlog-sdk = { path = "libs/devlog-sdk", default-features = false }
schema = { path = "libs/schema/rust", default-features = false }
crossbeam = "0.8.4"
anyhow = { version = "1.0.99", default-features = false }
crux_core = { version = "0.16.1" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.16", default-features = false }
serde_derive = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.143", default-features = false }
bytemuck = "1.24.0"
chrono = { version = "0.4.42", default-features = false }
lazy_static = { version = "1.5.0", default-features = false }
reed-solomon-erasure = { version = "6.0.0", default-features = false }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
ringbuf = "0.4.8"
tonic-middleware = { version = "0.3.0", default-features = false }
tokio = { version = "1.47.1", default-features = false }
reqwest = { version = "0.12.23", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
log = { version = "0.4.28", default-features = false }
tonic = { version = "0.13.1", default-features = false }
prost = { version = "0.13.5", default-features = false }
uniffi = { version = "0.29.4" }
bincode = { version = "1.3.3", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
url = { version = "2.5.7", default-features = false }
uuid = { version = "1.18.1", default-features = false }
bytes = { version = "1.11.0", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
tokio-util = { version = "0.7.17", default-features = false }
redb = { version = "3.1.0", default-features = false }
futures-timer = { version = "3.0.3", default-features = false, features = ["wasm-bindgen"] }
n0-future = { version = "0.3.1", default-features = false }
http = { version = "1.3.1", default-features = false }
async-stream = { version = "0.3.6", default-features = false }
once_cell = { version = "1.21.3", default-features = false }
futures = {version = "0.3.31", default-features = false }
http-body = { version = "1.0.1", default-features = false }
erased-serde = "0.4.8"
indexmap = "2.11.0"
tonic-web = "0.14.1"
hostname = "0.4.1"
machine-uid = "0.5.3"
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-json"] }
image = "0.25.8"
tempfile = "3.23.0"
tokio-cron-scheduler = { version = "0.15.1", default-features = false }
str0m = "0.17.0"
tokio-tungstenite = "0.29.0"
socket2 = "0.6.3"
sha1 = "0.10.6"
base64 = "0.22.1"
stun-proto = { version = "2.0.0", features = ["std"] }
if-addrs = "0.15.0"
mdns-sd = "0.18.2"
hmac = "0.12.1"
actix-web = "4.11.0"
h3ron = "0.18.0"
geo-types = "0.7"
maxminddb = "0.24"
jsonwebtoken = "9.3"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }
cargo-run-bin = { version = "1.7.2" }
cargo-binstall = { version = "1.10.22" }

[workspace.metadata]
# Will log the query command at runtime
surreal_enable_log = true
# Will log the generated code at build time
surreal_enable_compile_log = false
# Change the naming convention of a generated statement into a camel case
surreal_use_camel_case = false
# The log namespace, apply for both build time log and runtime log
surreal_namespace = "surrealql"
# The macro name that use for info log
surreal_info_log_macro = "log::debug"
# The macro name that use for warning log
surreal_warn_log_macro = "log::debug"
