[package]
name = "backend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../libs/schema/rust", features = ["client", "server"] }
devlog-sdk = { path = "../libs/devlog-sdk", features = ["distributed_id", "s3", "grpc-server", "grpc-client"] }
core-services = { path = "../libs/core-services", features = ["local-storage", "s3", "grpc-server", "grpc-client", "token"] }
migration = { path = "migration" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tonic-middleware = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1.17"
sea-orm = { workspace = true }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres"] }
futures.workspace = true
tokio-cron-scheduler = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
actix-web = "4"
actix-rt = "2"
semver = "1"
