[package]
name = "backend"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../libs/schema/rust", features = ["client", "server"] }
devlog-sdk = { path = "../libs/devlog-sdk", features = ["distributed_id", "s3", "grpc-server", "grpc-client"] }
core-services = { path = "../libs/core-services", features = ["local-storage", "s3", "grpc-server", "grpc-client", "token"] }
migration = { path = "migration" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tonic-middleware = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1.17"
sea-orm = { workspace = true }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres"] }
futures.workspace = true
tokio-cron-scheduler = { workspace = true }
chrono = { workspace = true }
rand = "0.8"
semver = "1"
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
hex = "0.4"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
reqwest = { workspace = true, features = ["json", "rustls"] }
axum = "0.8"
tower = { version = "0.5", features = ["steer"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
http = { workspace = true, default-features = true }
bytes = { workspace = true, default-features = true }
