[package]
name = "native"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "native"
required-features = ["lib"]

[features]
typegen = ["crux_core/typegen"]

# All of theses deps are required but because optimization in build time
# we need to mark it as optional, then enable it in the feature ["lib"]
[dependencies]
crux_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
lazy_static = { workspace = true }
uniffi = { workspace = true }
wasm-bindgen = { version = "0.2.100" }
shared = { path = "../shared" }
core-services = { path = "../libs/core-services", features = ["db-red", "local-storage", "retry"] }
schema = { path = "../libs/schema/rust", features = ["bindgen", "client"] }
devlog-sdk = { path = "../libs/devlog-sdk" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
async-trait = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
erased-serde = { version = "0.4.5" }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }
url = { workspace = true }
webrtc = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
stunclient = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
mime_guess = { workspace = true }
tokio-util = {workspace = true}
redb = { workspace = true }

[target.uniffi-bindgen.dependencies]
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[package.metadata]
# Will log the query command at runtime
surreal_enable_log = true
# Will log the generated code at build time
surreal_enable_compile_log = true
# Change the naming convention of generated statement into camel case
surreal_use_camel_case = false
# The log namespace, apply for both build time log and runtime log
surreal_namespace = "surrealql"
# The macro name that use for info log
surreal_info_log_macro = "log::info"
# The macro name that use for warning log
surreal_warn_log_macro = "log::info"