[package]
name = "relay-server"
description = "A relay server using tonic gRPC with tokio"
authors.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
log = { workspace = true }
serde = { workspace = true }
devlog-sdk = { workspace = true, features = ["gateway", "grpc-server", "grpc-client", "tcp"] }
schema = { workspace = true, features = ["client", "server"] }
tonic = { workspace = true, features = ["tls-webpki-roots", "tls-native-roots"] }
tonic-middleware = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
env_logger = "0.11.6"
async-trait = { workspace = true }
base64 = { workspace = true }
core-services = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["net"] }
public-ip = "0.2"
turn-server.workspace = true
