[workspace]
members = [
    "app",
]

resolver = "1"

[profile.dev]
opt-level = 0
debug = 1
strip = false
split-debuginfo = "unpacked"
incremental = true
codegen-units = 256
lto = false
panic = "unwind"
debug-assertions = true
overflow-checks = true
rpath = false

# Optimize dependencies even in dev builds for better performance
[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[workspace.package]
authors = ["Jimmy"]
edition = "2021"