[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
core-services = { workspace = true, default-features = false }
schema = { workspace = true, features = ["client"], default-features = false }
devlog-sdk = { workspace = true, default-features = false }
tonic = { workspace = true, default-features = false }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
h3o = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }
futures-util = { workspace = true }
bytes.workspace = true
prost.workspace = true
futures-timer = {workspace = true, features = ["wasm-bindgen"]}
n0-future.workspace = true
async-stream = {workspace = true, default-features = false}
bincode.workspace = true
reqwest = { workspace = true, features = ["json"], default-features = false }
matchbox_protocol.workspace = true
matchbox_socket.workspace = true
ewebsock = { workspace = true, features = ["tokio", "tls"] }
once_cell = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
serde_json = "1.0.140"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js", "v4"] }