[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
core-services = { workspace = true, default-features = false, features = ["retry"] }
schema = { workspace = true, features = ["client"], default-features = false }
devlog-sdk = { workspace = true, default-features = false }
tonic = { workspace = true, default-features = false }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
serde = { workspace = true, features = ["derive"] }
futures-util = { workspace = true }
prost.workspace = true
futures-timer = {workspace = true, features = ["wasm-bindgen"]}
n0-future.workspace = true
async-stream = {workspace = true, default-features = false}
bincode.workspace = true
reqwest = { workspace = true, features = ["json"], default-features = false }
matchbox_protocol.workspace = true
matchbox_socket.workspace = true
ewebsock = { workspace = true, features = ["tokio", "tls"] }
once_cell = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
frunk = "0.4.4"
derive_more = "2.0.1"
enum_dispatch = "0.3.13"
ambassador = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js", "v7"] }
