[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
core-services = { workspace = true, default-features = false, features = ["retry"] }
reed-solomon-erasure.workspace = true
schema = { workspace = true, features = ["client"], default-features = false }
devlog-sdk = { workspace = true, default-features = false }
tonic = { workspace = true, default-features = false }
async-trait = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
bytemuck.workspace = true
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
serde = { workspace = true, features = ["derive"] }
futures-util = { workspace = true }
prost.workspace = true
futures-timer = {workspace = true, features = ["wasm-bindgen"]}
n0-future.workspace = true
async-stream = {workspace = true, default-features = false}
bincode.workspace = true
raptorq.workspace = true
reqwest = { workspace = true, features = ["json"], default-features = false }
matchbox_protocol.workspace = true
matchbox_socket.workspace = true
ewebsock = { workspace = true, features = ["tokio", "tls"] }
once_cell = { workspace = true }
futures = { workspace = true }
http-body = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
derive_more = {  version = "2.0.1", features = ["try_from", "try_into", "try_unwrap"] }
ambassador = "0.4.2"

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js", "v7"] }
