[package]
name = "shared_types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]

[build-dependencies]
anyhow.workspace = true
crux_core.workspace = true
shared = { path = "../shared", features = ["typegen"] }
native = { path = "../native", features = ["typegen"] }
schema = { path = "../libs/schema/rust" }
