[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
crux_core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "fs", "process"] }
async-trait.workspace = true
n0-future.workspace = true
shared = { path = "../../shared" }
core-services = { path = "../../libs/core-services" }
native = { path = "../../native" }
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log.workspace = true
schema = { path = "../../libs/schema/rust" }
hostname.workspace = true
machine-uid.workspace = true
uuid.workspace = true
tauri-plugin-deep-link = "2"
thiserror.workspace = true
image.workspace = true

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
