[package]
name = "Bytover"
version = "0.1.0"
description = "Transfer things"
authors = ["midwex.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
crux_core.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "fs", "process"] }
async-trait.workspace = true
n0-future.workspace = true
shared = { path = "../../shared" }
core-services = { path = "../../libs/core-services" }
native = { path = "../../native" }
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log.workspace = true
schema = { path = "../../libs/schema/rust" }
hostname.workspace = true
machine-uid.workspace = true
file_icon_provider = "0.4.0"
uuid.workspace = true
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
thiserror.workspace = true
image.workspace = true
tauri-plugin-drag = "2.1.0"
rdev = { git = "https://github.com/Narsil/rdev.git", branch = "main" }
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
dispatch = "0.2.0"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
chrono = { workspace = true, features = ["std", "clock"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
cacao = { version = "0.4.0-beta2", features = ["appkit"] }
